# ome-zarr-book

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
book/: 1-storage.md  2-creation.md  3-processing.md  3.1-parallel-examples.md  4-export.md  appendices.md  home.md  myst.yml
