[project]
name = "ome-zarr-book"
version = "1.0"
description = "An introduction to OME-Zarr for big bioimaging data."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "imageio[tifffile]==2.37.0",
    "jupyter-book==2.0.2",
    "matplotlib==3.10.7",
    "numcodecs==0.15.1",
    "numpy==2.3.4",
    "zarr==2.18.7",
    "rich==14.2.0",
    "pydantic-zarr==0.7.0",
    "ome-zarr-models==0.1.10",
    "joblib==1.5.2",
    "scipy==1.16.3",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = ["jupyter-ruff==0.3.0", "jupyterlab==4.4.10", "jupytext==1.18.1"]
