[project]
name = "ome-zarr-book"
version = "1.0"
description = "An introduction to OME-Zarr for big bioimaging data."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "imageio[tifffile]==2.37.2",
    "jupyter-book==2.1.1",
    "matplotlib==3.10.8",
    "numcodecs==0.15.1",
    "numpy==2.4.1",
    "zarr==2.18.7",
    "rich==14.3.1",
    "pydantic-zarr==0.9.1",
    "ome-zarr-models==0.1.10",
    "joblib==1.5.3",
    "scipy==1.17.0",
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = ["jupyter-ruff==0.3.1", "jupyterlab==4.5.3", "jupytext==1.19.1"]
