[project]
name = "ome-zarr-book"
version = "1.0"
description = "An introduction to OME-Zarr for big bioimaging data."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "imageio[tifffile]==2.37.3",
    "jupyter-book==2.1.2",
    "matplotlib==3.10.8",
    "numcodecs==0.16.5",
    "numpy==2.4.3",
    "zarr==3.1.5",
    "rich==14.3.3",
    "pydantic-zarr==0.9.1",
    "ome-zarr-models==1.6",
    "joblib==1.5.3",
    "scipy==1.17.1",
    "scikit-image==0.26.0"
]

[tool.setuptools]
packages = []

[dependency-groups]
dev = ["jupyter-ruff==0.3.1", "jupyterlab==4.5.5", "jupytext==1.19.1"]
